syntax = "proto3";

package formation;


message Formation {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetFormationRequest {
  string formation_id = 1;
}

message GetFormationResponse {
    Formation Formation = 1;
}

message SearchFormationsRequest {
  string query = 1;
}

message SearchFormationsResponse {
  repeated Formation formations = 1;
}

message CreateFormationRequest {
  string formation_id = 1;
  string title = 2;
  string description = 3;
}

message CreateFormationResponse {
    Formation formation = 1;
}

service FormationService {
  rpc GetFormation(GetFormationRequest) returns (GetFormationResponse);
  rpc SearchFormations(SearchFormationsRequest) returns (SearchFormationsResponse);
  rpc CreateFormation(CreateFormationRequest) returns (CreateFormationResponse);
}
